@startuml
' Classes principais
abstract Usuario {
    - id: int
    - nome: String
    - cpf: String
    - email: String
    - senha: String
    + cadastrar(): void
    + login(): boolean
}

class Cliente {
    - telefone: String
    - dataCadastro: DateTime
    + escolherSessao(): void
    + comprarIngresso(): void
}

class Admin {
    - nivelAcesso: int
    - matricula: String
    + cadastrarFilme(): void
    + editarFilme(): void
    + inativarFilme(): void
    + cadastrarSessao(): void
    + editarSessao(): void
    + inativarSessao(): void
    + cadastrarSala(): void
    + editarSala(): void
    + inativarSala(): void
}

class Ingresso {
    - id: int
    - codigoQR: String
    - status: String
    - ingressoMeiaEntrada: boolean
    + validar(): boolean
}

class Pagamento {
    - id: int
    - valorTotal: double
    - metodo: String
    - dataHora: DateTime
    + processar(): boolean
    + estornar(): void
}

class Pedido {
    - id: int
    - dataHora: DateTime
    - status: String
    + criarPedido(): void
    + cancelarPedido(): void
}

class Assento {
    - id: int
    - fila: char
    - numero: int
    - status: boolen
    + mudarStaus(): boolean
}

class Sessao {
    - id: int
    - horario: DateTime
    - ativa: boolean
    + exibirDetalhes(): String
}

class Filme {
    - id: int
    - titulo: String
    - duracao: int
    - classificacao: String
    - cartaz: Image
    + exibirDetalhes(): String
}

class Sala {
    - id: int
    - numero: int
    - capacidade: int
    - sala3D: boolean
    + verificarDisponibilidade(): boolean
}

class Genero {
    - id: int
    - nome: String
    - descricao: String
    - icone: String
    + filtrarFilmes(): List
}

Usuario <|-- Cliente
Usuario <|-- Admin

Cliente "1" -- "n" Pedido
Pedido "1" -- "1..n" Ingresso
Pedido "1" <--o "1" Pagamento

Ingresso "n" -- "1" Sessao
Ingresso "1" -- "1" Assento

Sala "1" o-up-> "n" Assento

Admin "1" -- "n" Sessao

Filme "1" -- "n" Sessao
Sala "1" -up- "n" Sessao
Filme "n" -- "1..n" Genero

@enduml